feat: swagger docs finalizada e queries ajustadas
